# aurora-naysayer

./: .gitignore  Cargo.toml  README.md
benches/: naysayer.rs  results.txt  sponge.rs
scripts/: gen_solidity_repeated_squaring.py  prepare_benches.sh
src/: lib.rs  reader.rs
src/aurora/: mod.rs  tests.rs
src/naysayer/: mod.rs  tests.rs
